# agentic_blog_writer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: application.mdc
app/agents/: article_brief_writer_agent.py  article_synthesizer_agent.py  common_imports.py  editor_agent.py  manager_agent.py  planner_agent.py  research_agent.py  research_recovery_agent.py  section_editor_agent.py  section_research_agent.py  section_synthesizer_agent.py  synthesizer_agent.py  web_scraper_agent.py  writer_agent.py
app/agents/hooks/: custom_agent_hooks.py
app/core/: config.py  console_config.py  logging_config.py
app/models/: article_schemas.py  workflow_schemas.py
app/services/: __init__.py  gemini_enhancer.py  web_scraping_service.py  workflow_data_manager.py  workflow_display_manager.py
app/tools/: bing_websearch.py  scraper.py  serper_websearch.py  web_search_tool.py
app/workflows/: article_creation_workflow.py
data/write-an-article-about-the-latest-trends-in-ai/: planning.json  researching.json
docs/: 00_repo-inventory.md  01_functional-overview.md  02_system-architecture.md  03_agent-design-and-workflows.md  04_data-and-rag-pipeline.md  05_prompting-strategy-and-templates.md  06_algorithms-and-implementation.md  07_configuration-and-deployment.md  11_security-privacy-and-ethics.md  12_limitations-risks-and-future-work.md  agentic-blogwriter-system-description.md  cantons_run_inputs.txt  configuration_fix.md  research_agent_improvements.md
